--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,14 @@
   width: 100%;
   height: 300px;
   background-color:rgb(33, 33, 33);
-  color: cornsilk;
   margin-bottom: 50px;
 }
 
-#landingpage h1{
+#intro{
   text-align: center;
   padding-top: 60px;
   font-weight: bold;
-  font-size: 60px;
+  color: #fff;
 }
 
 .user-small{
